# voxrs

./: .gitignore  Cargo.toml  README.md  build.rs  crates.js  search-index.js  settings.html  source-files.js
voxrs/: Cargo.toml  all.html  index.html  sidebar-items.js  struct.Game.html
voxrs/game/: struct.Game.html
voxrs/src/: camera.rs  game.rs  io.rs  lib.rs  main.rs  texture.rs
voxrs/system/: index.html  sidebar-items.js
voxrs_asset/: Cargo.toml  all.html  build.rs  enum.AssetBuildResult.html  enum.BlockSize.html  index.html  sidebar-items.js  struct.AssetHandle.html  struct.AssetHash.html  struct.AssetManager.html  struct.AssetPath.html  struct.FontAsset.html  struct.MaterialAsset.html  struct.ShaderAsset.html  struct.TextAsset.html  struct.TextureAsset.html  struct.WorldBlockAsset.html  struct.WorldBlockAssetRaw.html  struct.WorldChunkRaw.html  struct.WorldMaterialAsset.html
voxrs_asset/asset_path/: struct.AssetPath.html
voxrs_asset/assets/: enum.AssetBuildResult.html
voxrs_asset/font/: struct.FontAsset.html
voxrs_asset/handle/: struct.AssetHandle.html
voxrs_asset/manager/: struct.AssetHash.html  struct.AssetManager.html
voxrs_asset/material/: struct.MaterialAsset.html
voxrs_asset/shader/: struct.ShaderAsset.html
voxrs_asset/src/: asset_path.rs  assets.rs  font.rs  handle.rs  lib.rs  manager.rs  material.rs  shader.rs  text.rs  texture.rs  world_block.rs  world_material.rs
voxrs_asset/text/: struct.TextAsset.html
voxrs_asset/texture/: struct.TextureAsset.html
voxrs_asset/world_block/: enum.BlockSize.html  struct.WorldBlockAsset.html  struct.WorldBlockAssetRaw.html  struct.WorldChunkRaw.html
voxrs_asset/world_material/: struct.WorldMaterialAsset.html
voxrs_core/: Cargo.toml  all.html  index.html  sidebar-items.js
voxrs_core/comp/: index.html  sidebar-items.js  struct.DirectionComp.html  struct.PositionComp.html
voxrs_core/res/: index.html  sidebar-items.js  struct.CameraRes.html  struct.ElapsedTimeRes.html  struct.KeyInputRes.html  struct.MouseInputRes.html  struct.WorldBlockRes.html
voxrs_core/src/: lib.rs
voxrs_derive/: Cargo.toml  all.html  derive.Asset.html  index.html  sidebar-items.js
voxrs_derive/src/: asset.rs  lib.rs
voxrs_ed/: Cargo.toml  all.html  index.html  sidebar-items.js  struct.Editor.html
voxrs_ed/editor/: struct.Editor.html
voxrs_ed/res/: index.html  sidebar-items.js  struct.EditorAssetRes.html  struct.EditorRes.html
voxrs_ed/src/: camera.rs  command.rs  control.rs  editor.rs  history.rs  lib.rs  main.rs  terminal_command.rs  widget_message.rs
voxrs_ed/system/: index.html  sidebar-items.js
voxrs_math/: Cargo.toml  all.html  constant.BLOCK_COUNT_IN_CHUNKSIDE.html  constant.TOTAL_BLOCK_COUNTS_IN_CHUNK.html  enum.Dir.html  enum.RayAabbResult.html  fn.get_matrix.html  fn.set_matrix.html  index.html  sidebar-items.js  struct.Aabb.html  struct.Angle.html  struct.BlockPos.html  struct.ChunkPos.html  struct.Frustum.html  struct.IVec2.html  struct.IVec3.html  struct.Mat3.html  struct.Mat4.html  struct.Plane.html  struct.Quat.html  struct.Ray.html  struct.Rect2.html  struct.Sphere.html  struct.Vec2.html  struct.Vec3.html  struct.Vec4.html  struct.WorldBlockCounts.html  struct.WorldChunkCounts.html
voxrs_math/aabb/: struct.Aabb.html
voxrs_math/angle/: struct.Angle.html
voxrs_math/block_pos/: struct.BlockPos.html
voxrs_math/chunk/: constant.BLOCK_COUNT_IN_CHUNKSIDE.html  constant.TOTAL_BLOCK_COUNTS_IN_CHUNK.html  struct.WorldBlockCounts.html  struct.WorldChunkCounts.html
voxrs_math/chunk_pos/: struct.ChunkPos.html
voxrs_math/dir/: enum.Dir.html
voxrs_math/frustum/: struct.Frustum.html
voxrs_math/matrix4/: fn.get_matrix.html  fn.set_matrix.html
voxrs_math/plane/: struct.Plane.html
voxrs_math/ray/: enum.RayAabbResult.html  struct.Ray.html
voxrs_math/rect/: struct.Rect2.html
voxrs_math/sphere/: struct.Sphere.html
voxrs_math/src/: aabb.rs  angle.rs  block_pos.rs  chunk.rs  chunk_pos.rs  dir.rs  frustum.rs  lib.rs  matrix4.rs  mod.rs  plane.rs  quat.rs  ray.rs  rect.rs  sphere.rs  vector3.rs
voxrs_render/: Cargo.toml  all.html  index.html  sidebar-items.js
voxrs_render/blueprint/: enum.Ui.html  index.html  sidebar-items.js  struct.Blueprint.html  struct.Camera.html  struct.Chunk.html  struct.DynamicBlock.html  struct.Panel.html  struct.Text.html  struct.TextSection.html  type.BlockIdx.html  type.BlockMatIdx.html  type.ChunkId.html
voxrs_render/render/: enum.Command.html  fn.create_rendering_thread.html  index.html  sidebar-items.js  struct.Renderer.html
voxrs_render/src/: lib.rs
voxrs_render/ui/: index.html  sidebar-items.js  struct.FontAtlas.html  struct.GlyphAtlasInfo.html  struct.GlyphPos.html
voxrs_rhi/: Cargo.toml  all.html  constant.DEPTH_FORMAT.html  index.html  sidebar-items.js  struct.DynamicBuffer.html  struct.DynamicTexture.html  struct.Texture.html
voxrs_rhi/dynamic_buffer/: struct.DynamicBuffer.html
voxrs_rhi/dynamic_texture/: struct.DynamicTexture.html
voxrs_rhi/src/: dynamic_buffer.rs  dynamic_texture.rs  lib.rs  texture.rs
voxrs_rhi/texture/: constant.DEPTH_FORMAT.html  struct.Texture.html
voxrs_types/: Cargo.toml  all.html  enum.SafeCloner.html  index.html  sidebar-items.js  struct.Clock.html  struct.Color.html  struct.Fps.html
voxrs_types/clock/: struct.Clock.html
voxrs_types/color/: struct.Color.html
voxrs_types/fps/: struct.Fps.html
voxrs_types/io/: index.html  sidebar-items.js  struct.GeneralFileSystem.html  trait.FileSystem.html
voxrs_types/safecloner/: enum.SafeCloner.html
voxrs_types/src/: block_pos.rs  chunk.rs  chunk_pos.rs  clock.rs  color.rs  fps.rs  io.rs  lib.rs  (+1 more)
voxrs_ui/: Cargo.toml  all.html  enum.AnchorHorizon.html  enum.AnchorVertical.html  enum.Interaction.html  fn.init_resources.html  index.html  sidebar-items.js  struct.ButtonInfo.html  struct.EditableTextInfo.html  struct.FocusedWidget.html  struct.InputQueue.html  struct.OutputQueue.html  struct.PanelInfo.html  struct.PanelWidget.html  struct.ScreenResolution.html  struct.TerminalInfo.html  struct.TextInfo.html  struct.WidgetBuilder.html  struct.WidgetPlacementInfo.html
(+439 files in other folders)
