[package]
name = "voxrs"
version = "0.1.0"
authors = ["cLazyZombie <rusad96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "^0.6"
winit = "^0.24"
env_logger = "^0.8"
bytemuck = { version = "^1.4", features = [ "derive" ] }
futures = "^0.3"
nalgebra-glm = "^0.9"
anyhow = "^1.0"
image = "^0.23"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
crossbeam-channel = "^0.5"

[build-dependencies]
anyhow = "^1.0"
fs_extra = "^1.2"
glob = "^0.3"
shaderc = "^0.7"

[dev-dependencies]
approx = "^0.4"
