[package]
name = "voxrs"
version = "0.1.0"
authors = ["cLazyZombie <rusad96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voxrs_derive = { version = "0.1", path = "../voxrs_derive"}
voxrs_math = { version = "0.1", path = "../voxrs_math" }
voxrs_types = { version = "0.1", path = "../voxrs_types" }
wgpu = "0.7"
winit = "0.24"
env_logger = "0.8"
bytemuck = { version = "1.4", features = [ "derive" ] }
futures = "0.3"
anyhow = "1.0"
image = "0.23"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
tokio = { version = "1.2", features = ["full"] }
async-trait = "0.1"
legion = "0.4"
derive_more = "0.99"
enumflags2 = "0.7"
parking_lot = "0.11"
rayon = "1.5"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
shaderc = "0.7"