[package]
name = "voxrs_asset"
version = "0.1.0"
authors = ["cLazyZombie <rusad96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voxrs_derive = { version = "0.1", path = "../voxrs_derive" }
voxrs_types = { version = "0.1", path = "../voxrs_types" }
voxrs_math = { version = "0.1", path = "../voxrs_math" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.11"
anyhow = "1"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["full"] }
wgpu = "0.7"
log = "0.4"
image = "0.23"
enumflags2 = "0.7"

[dev-dependencies]
voxrs_types = { version = "0.1", path = "../voxrs_types", features = ["test"] }

[build-dependencies]
anyhow = "1.0"
glob = "0.3"
shaderc = "0.7"