[package]
authors = ["cLazyZombie <rusad96@gmail.com>"]
edition = "2018"
name = "voxrs_core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
enumflags2 = "0.7"
rayon = "1.5"
voxrs_asset = {version = "0.1", path = "../voxrs_asset"}
voxrs_math = {version = "0.1", path = "../voxrs_math"}
voxrs_render = {version = "0.1", path = "../voxrs_render"}
voxrs_types = {version = "0.1", path = "../voxrs_types"}
winit = "0.24"
