[package]
authors = ["cLazyZombie <rusad96@gmail.com>"]
edition = "2018"
name = "voxrs_core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voxrs_asset = {version = "0.1", path = "../voxrs_asset"}
voxrs_math = {version = "0.1", path = "../voxrs_math"}
voxrs_render = {version = "0.1", path = "../voxrs_render"}
voxrs_types = {version = "0.1", path = "../voxrs_types"}

derive_more = "0.99"
enumflags2 = "0.7"
log = "0.4"
rayon = "1.5"
winit = "0.24"

[dev-dependencies]
voxrs_types = {version = "0.1", path = "../voxrs_types", features = ["test"]}
