[package]
name = "voxrs_derive"
version = "0.1.0"
authors = ["cLazyZombie <rusad96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {version="1", features=["full", "fold"]}
quote = "1"
proc-macro2 = "1"