[package]
name = "voxrs_ed"
version = "0.1.0"
authors = ["cLazyZombie <rusad96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voxrs_derive = { version = "0.1", path = "../voxrs_derive"}
voxrs_math = { version = "0.1", path = "../voxrs_math" }
voxrs_types = { version = "0.1", path = "../voxrs_types" }
voxrs_asset = { version = "0.1", path = "../voxrs_asset" }
voxrs_render = { version = "0.1", path = "../voxrs_render" }
winit = "0.24"
env_logger = "0.8"
anyhow = "1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["full"] }
legion = "0.4"
derive_more = "0.99"
enumflags2 = "0.7"
rayon = "1.5"
futures = "0.3"
