[package]
authors = ["cLazyZombie <rusad96@gmail.com>"]
edition = "2018"
name = "voxrs_ed"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voxrs_asset = {version = "0.1", path = "../voxrs_asset"}
voxrs_core = {version = "0.1", path = "../voxrs_core"}
voxrs_derive = {version = "0.1", path = "../voxrs_derive"}
voxrs_math = {version = "0.1", path = "../voxrs_math"}
voxrs_render = {version = "0.1", path = "../voxrs_render"}
voxrs_types = {version = "0.1", path = "../voxrs_types"}
voxrs_ui = {version = "0.1", path = "../voxrs_ui"}

anyhow = "1"
crossbeam-channel = "0.5"
derive_more = "0.99"
enumflags2 = "0.7"
env_logger = "0.8"
futures = "0.3"
legion = "0.4"
log = "0.4"
rayon = "1.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.4", features = ["full"]}
winit = "0.24"
