[package]
authors = ["cLazyZombie <rusad96@gmail.com>"]
edition = "2018"
name = "voxrs_math"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.4"
enumflags2 = "0.7"
glam = {version = "0.14", features = []}
serde = {version = "1.0", features = ["derive"]}
