[package]
name = "voxrs_render"
version = "0.1.0"
authors = ["cLazyZombie <rusad96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voxrs_math = { version = "0.1", path = "../voxrs_math" }
voxrs_asset = { version = "0.1", path = "../voxrs_asset" }
voxrs_types = { version = "0.1", path = "../voxrs_types" }
enumflags2 = "0.7"
wgpu = "0.7"
crossbeam-channel = "0.5"
bytemuck = { version = "1.4", features = [ "derive" ] }
winit = "0.24"
futures = "0.3"