[package]
authors = ["cLazyZombie <rusad96@gmail.com>"]
edition = "2018"
name = "voxrs_render"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voxrs_asset = {version = "0.1", path = "../voxrs_asset"}
voxrs_math = {version = "0.1", path = "../voxrs_math"}
voxrs_types = {version = "0.1", path = "../voxrs_types"}

bytemuck = {version = "1.5", features = ["derive"]}
crossbeam-channel = "0.5"
enumflags2 = "0.7"
futures = "0.3"
wgpu = "0.7"
winit = "0.24"
