[package]
authors = ["cLazyZombie <rusad96@gmail.com>"]
edition = "2018"
name = "voxrs_render"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
iced = []

[dependencies]
voxrs_asset = {version = "0.1", path = "../voxrs_asset"}
voxrs_math = {version = "0.1", path = "../voxrs_math"}
voxrs_rhi = {version = "0.1", path = "../voxrs_rhi"}
voxrs_types = {version = "0.1", path = "../voxrs_types"}
voxrs_ui = {version = "0.1", path = "../voxrs_ui"}

ab_glyph = "0.2.10"
bytemuck = {version = "1.5", features = ["derive"]}
crossbeam-channel = "0.5"
enumflags2 = "0.7"
futures = "0.3"
glyph_brush_layout = "0.2.1"
guillotiere = "0.6"
log = "0.4"
wgpu = "0.7"
winit = "0.24"
