[package]
name = "voxrs_types"
version = "0.1.0"
authors = ["cLazyZombie <rusad96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test = []

[dependencies]
voxrs_math = { version = "0.1", path = "../voxrs_math" }
serde = { version = "1.0", features = ["derive"] }
enumflags2 = "0.7"
anyhow = "1"
async-trait = "0.1"