[package]
authors = ["cLazyZombie <rusad96@gmail.com>"]
edition = "2018"
name = "voxrs_ui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
iced = ["iced_wgpu", "iced_winit"]

[dependencies]
voxrs_asset = {version = "0.1", path = "../voxrs_asset"}

iced_wgpu = {version = "0.4", optional = true}
iced_winit = {version = "0.3", optional = true}
