[package]
authors = ["cLazyZombie <rusad96@gmail.com>"]
edition = "2018"
name = "voxrs_ui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
voxrs_asset = {version = "0.1", path = "../voxrs_asset"}
voxrs_math = {version = "0.1", path = "../voxrs_math"}
voxrs_render = {version = "0.1", path = "../voxrs_render"}

legion = "0.4"
winit = "0.25"
